# OrderBook_simulator_cpp

./: .clang-format  .gitignore  BinarySerializer.h  BookDynamicsEngine.h  CMakeLists.txt  Constants.h  CrossExchangeFeed.h  ExchangeRules.h  LevelInfo.h  LiveMarketData.cpp  LockFreeQueue.h  MarketDataFeed.h  MarketMicrostructure.h  MarketTypes.h  Order.h  OrderBook.h  OrderModify.h  OrderPool.h  OrderType.h  PERFORMANCE_IMPROVEMENTS.md  PerformanceBenchmarks.h  README.md  RegimeEngine.h  RiskEngine.h  SIMDMath.h  Signalengine.h  StrategyEngine.h  TcpSender.h  Trade.h  Types.h  test.txt  tests.cpp  vcpkg.json
gateway/: package-lock.json  package.json  server.js
ui/: README.md  package-lock.json  package.json
ui/src/: app.html
ui/src/routes/: +layout.svelte  +page.svelte
